--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,8 +1,9 @@
 name: Langoon Warehouse On Pull Request Workflow
 
-on: [pull_request]
-  branches:
-    - master
+on: 
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
