Workflow should start on both push and pull request

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,8 +1,6 @@
 name: Langoon Warehouse On Pull Request Workflow
 
-on: [pull_request]
-  branches:
-    - master
+on: [push, pull_request]
 
 jobs:
   build:
