--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,6 +16,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
+          sudo apt install tesseract-ocr
           sudo apt-get install libzbar0
           python -m pip install --upgrade pip
           pip install flake8 pytest
