--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -1,9 +1,10 @@
 name: Continuous Integration
 
-on: [push]
-  branches:
-    - '**'
-    - '!master'
+on:
+  push:
+    branches:
+      - "**"
+      - "!master"
 
 jobs:
   build:
