Improved CI and CD workflow

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -26,7 +26,10 @@ jobs:
           sudo scripts/install-binaries.sh
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          sudo scripts/install-dependencies.sh ${{ secrets.DEVICE_TOKEN }}
+      - name: Start services
+        run: |
+          sudo scripts/start-services.sh ${{ secrets.DEVICE_TOKEN }}
       - name: Lint code
         run: |
           # stop the build if there are Python syntax errors or undefined names
