--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,4 +1,4 @@
-name: Continuous Deployment
+name: Deployment
 
 on:
   pull_request:
@@ -8,7 +8,6 @@ on:
 
 jobs:
   deploy:
-    if: github.pull_request.merged == 'true'
     name: Deploy to devices
     runs-on: ubuntu-latest
     steps:
